<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_cv"
    tools:context=".Contacto">

    <include android:id="@+id/toolBar"
        layout="@layout/action_bar"></include>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen"
        android:layout_marginBottom="@dimen/margen"
        android:layout_below="@id/toolBar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_nombre" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen"
        android:layout_below="@id/tfNombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfComentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen"
        android:layout_below="@id/tfEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etComentario"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alto_comentario"
            android:maxLines="4"
            android:hint="@string/placeholder_comentario" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnEnviarCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/RaisedBtn"
        android:text="@string/btn_enviar_comentario"
        android:layout_marginBottom="@dimen/margen"
        android:layout_below="@id/tfComentario"></Button>

</RelativeLayout>