<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercaDe"
    android:background="@color/fondo_cv">

    <include android:id="@+id/toolBar"
        layout="@layout/action_bar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:layout_below="@id/toolBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/desarrollador"
            android:textStyle="bold"
            android:textSize="@dimen/tamano_nombre_contacto" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imgCircularPerfil"
            android:layout_width="@dimen/tamano_imagen_cv_dos"
            android:layout_height="@dimen/tamano_imagen_cv_dos"
            android:src="@drawable/news_xlarge_asiankungfugeneration_jkt201607"
            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_radius="5dp"
            app:civ_shadow_color="@color/colorPrimary"/>

        <TextView
            android:id="@+id/tvNombreContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/nombre_desarrollador"
            android:textStyle="bold"
            android:textSize="@dimen/tamano_nombre_contacto" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/imgIconoTelefono"
                android:layout_width="@dimen/tamano_icono"
                android:layout_height="@dimen/tamano_icono"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_telefono"/>

            <TextView
                android:id="@+id/tvTelefonoContacto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/telefono_desarrollador"
                android:textStyle="bold"
                android:textSize="@dimen/tamano_telefono_email" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgIconoEmail"
                android:layout_width="@dimen/tamano_icono"
                android:layout_height="@dimen/tamano_icono"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_email"/>

            <TextView
                android:id="@+id/tvEmailContacto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/email_desarrollador"
                android:textStyle="bold"
                android:textSize="@dimen/tamano_telefono_email" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>